# TigerEngine

./: .gitignore  CMakeLists.txt  README.md  build-all.bat  build-all.sh
beta/: build.bat  build.sh
beta/src/: main.c
engine/: build.bat  build.sh
engine/src/: defines.h
engine/src/core/: asserts.h  logger.c  logger.h
engine/src/platform/: platform.h  platform_win32.c
include/: pch.hpp  tiger_engine.hpp
include/glad/: glad.h
src/: D3D12nBodyGravity.vcxproj  D3D12nBodyGravity.vcxproj.filters  Leviathan.cpp  Leviathan.h  Leviathan.sln  Leviathan.vcxproj  Leviathan.vcxproj.filters  Main.cpp  Package.appxmanifest  glad.c  main.cpp  tiger_engine.cpp
